crates/panache-parser/tests/snapshots/yaml__yaml_suite_HWV9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 922
expression: snapshot
---
case_id: HWV9
input: "...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
