crates/panache-parser/tests/snapshots/yaml__yaml_suite_J5UC.snap
---
source: tests/yaml.rs
expression: snapshot
---
case_id: J5UC
input: "foo: blue\nbar: arrr\nbaz: jazz\n"
parsed_mapping_tree: true
