crates/panache-parser/tests/snapshots/yaml__yaml_suite_J7VC.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: J7VC
input: "one: 2\n\n\nthree: 4\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
