crates/panache-parser/tests/snapshots/yaml__yaml_suite_J9HZ.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: J9HZ
input: "---\nhr: # 1998 hr ranking\n  - Mark McGwire\n  - Sammy Sosa\nrbi:\n  # 1998 rbi ranking\n  - Sammy Sosa\n  - Ken Griffey\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
