crates/panache-parser/tests/snapshots/yaml__yaml_suite_JHB9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: JHB9
input: "# Ranking of 1998 home runs\n---\n- Mark McGwire\n- Sammy Sosa\n- Ken Griffey\n\n# Team ranking\n---\n- Chicago Cubs\n- St Louis Cardinals\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
