crates/panache-parser/tests/snapshots/yaml__yaml_suite_JQ4R.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: JQ4R
input: "block sequence:\n  - one\n  - two : three\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
