crates/panache-parser/tests/snapshots/yaml__yaml_suite_JR7V.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: JR7V
input: "- a?string\n- another ? string\n- key: value?\n- [a?string]\n- [another ? string]\n- {key: value? }\n- {key: value?}\n- {key?: value }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
