crates/panache-parser/tests/snapshots/yaml__yaml_suite_JS2J.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: JS2J
input: "First occurrence: &anchor Value\nSecond occurrence: *anchor\n"
has_error_contract: false
parsed_mapping_tree: true
