crates/panache-parser/tests/snapshots/yaml__yaml_suite_JTV5.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: JTV5
input: "? a\n  true\n: null\n  d\n? e\n  42\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
